--- a/Patient Transport Migration/Views/Home/Index.cshtml
+++ b/Patient Transport Migration/Views/Home/Index.cshtml
@@ -9,4 +9,5 @@
     <li>@Html.ActionLink("Verpleging Overzicht", "VerplegingOverzicht", "Home")</li>
     <li>@Html.ActionLink("Maak Vervoer Aanvraag", "MaakVervoerAanvraag", "Home")</li>
     <li>@Html.ActionLink("Dispatch Overzicht", "DispatchOverzicht" , "Home")</li>
+    <li>@Html.ActionLink("Transport Medewerker Taken", "TransportMedewerker", "Home")</li>
 </ul>
